# pixelflut-filler

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.c  color.h  main.c  window.c  window.h
c/: .gitignore  CMakeLists.txt  Makefile  color.c  main.c  window.c  window.h
rust/: Cargo.toml
rust/src/: canvas.rs  codec.rs  color.rs  fill.rs  gif.rs  image.rs  letters.rs  main.rs  pixelcollector.rs  snake.rs  window.rs
rust/src/letters/: consts.rs  mod.rs
src/: fill.rs  pixelcollector.rs  snake.rs
src/letters/: consts.rs
