[package]
name = "pixelflut-filler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clap = {version = "3.2.17", features = [ "derive" ] }
gif = "0.11.3"
flate2 = "1.0.23"
zstd = "0.11.1"
image = "0.24.2"
log = "0.4"
pretty_env_logger = "0.4"
